--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,6 @@
   <body>
     <script src="https://unpkg.com/react@16.0.0/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.development.js"></script>
-    <script src="/scripts/app.js"></script>
-    This is my HTML file!
+    This is my initial HTML file.
   </body>
 </html>
