Update blog name

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Indecision App</title>
+    <title>mzietlow/blog</title>
   </head>
   <body>
     <script src="https://unpkg.com/react@16.0.0/umd/react.development.js"></script>
