Use react instead of html

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
     <title>mzietlow/blog</title>
   </head>
   <body>
+    <div id="app"></div>
     <script src="https://unpkg.com/react@16.0.0/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.development.js"></script>
-    This is my initial HTML file.
+    <script src="scripts/index.js"></script>
   </body>
 </html>
