--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html><head><meta charset="UTF-8"><title>mzietlow/blog</title><script defer="defer" src="/blog/static/js/main.f3a83dfd.js"></script></head><body><div id="app"></div><script type="module" src="Home/bundle.js"></script></body></html>
+<!doctype html><html><head><meta charset="UTF-8"><title>mzietlow/blog</title><script defer="defer" src="/blog/static/js/main.f3a83dfd.js"></script></head><body><div id="app"></div><script type="module" src="blog/bundle.js"></script></body></html>
