--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html><head><meta charset="UTF-8"><title>mzietlow/blog</title><script defer="defer" src="/blog/static/js/main.9435a3bf.js"></script></head><body><div id="app"></div><script type="module" src="./bundle.js"></script></body></html>
+<!doctype html><html><head><meta charset="UTF-8"><title>mzietlow/blog</title><script defer="defer" src="/blog/static/js/main.9435a3bf.js"></script></head><body><div id="app"></div><script type="module" src="/bundle.js"></script></body></html>
