--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/bundle.js"></script>
+    <script type="module" src="./bundle.js"></script>
   </body>
 </html>
