--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html><head><meta charset="UTF-8"><title>mzietlow/blog</title><script defer="defer" src="/blog/static/js/main.16fd6b12.js"></script></head><body><div id="app"></div></body></html>
+<!doctype html><html><head><meta charset="UTF-8"><title>mzietlow/blog</title><script defer="defer" src="/blog/static/js/main.acb097a8.js"></script><link href="/blog/static/css/main.ba7ad49a.css" rel="stylesheet"></head><body><div id="app"></div></body></html>
