--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>mzietlow/blog</title>
+    <link rel="icon" type="image/png" href="/blog/images/favicon.png"/>
   </head>
   <body>
     <div id="app"></div>
