--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>mzietlow/blog</title>
+    <title>Malte malte Malte 👨🖌️👨</title>
     <link rel="icon" type="image/png" href="/blog/images/favicon.png"/>
   </head>
   <body>
